--- a/META.yml
+++ b/META.yml
@@ -1,13 +1,22 @@
 --- #YAML:1.0
-name:                Integer-Partition
-version:             0.03
-abstract:            Generate all integer partitions of an integer
-license:             perl
-generated_by:        ExtUtils::MakeMaker version 6.36
-distribution_type:   module
-requires:     
-meta-spec:
-    url:     http://module-build.sourceforge.net/META-spec-v1.2.html
-    version: 1.2
+name:               Integer-Partition
+version:            0.05
+abstract:           Generate all integer partitions of an integer
 author:
     - David Landgren
+license:            perl
+distribution_type:  module
+configure_requires:
+    ExtUtils::MakeMaker:  0
+build_requires:
+    ExtUtils::MakeMaker:  0
+requires:
+    perl:  5.008001
+no_index:
+    directory:
+        - t
+        - inc
+generated_by:       ExtUtils::MakeMaker version 6.56
+meta-spec:
+    url:      http://module-build.sourceforge.net/META-spec-v1.4.html
+    version:  1.4
